--- a/env/environment.yml
+++ b/env/environment.yml
@@ -6,18 +6,25 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - anyio=3.5.0=py310h06a4308_0
+  - argon2-cffi=21.3.0=pyhd3eb1b0_0
+  - argon2-cffi-bindings=21.2.0=py310h7f8727e_0
   - asttokens=2.0.5=pyhd3eb1b0_0
+  - attrs=21.4.0=pyhd3eb1b0_0
+  - babel=2.9.1=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
+  - beautifulsoup4=4.11.1=py310h06a4308_0
   - blas=1.0=mkl
+  - bleach=4.1.0=pyhd3eb1b0_0
   - brotli=1.0.9=h5eee18b_7
   - brotli-bin=1.0.9=h5eee18b_7
   - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.9.24=ha878542_0
+  - ca-certificates=2022.07.19=h06a4308_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2022.9.24=pyhd8ed1ab_0
+  - certifi=2022.9.24=py310h06a4308_0
   - cffi=1.15.1=py310h74dc2b5_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - cryptography=37.0.1=py310h9ce1e76_0
@@ -26,6 +33,7 @@ dependencies:
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.5.1=py310h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
   - entrypoints=0.4=py310h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.4.9=h6a678d5_0
@@ -48,10 +56,22 @@ dependencies:
   - intel-openmp=2021.4.0=h06a4308_3561
   - ipykernel=6.15.2=py310h06a4308_0
   - ipython=8.4.0=py310h06a4308_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=7.6.5=pyhd3eb1b0_1
   - jedi=0.18.1=py310h06a4308_1
+  - jinja2=3.0.3=pyhd3eb1b0_0
   - jpeg=9e=h7f8727e_0
+  - json5=0.9.6=pyhd3eb1b0_0
+  - jsonschema=4.16.0=py310h06a4308_0
+  - jupyter=1.0.0=py310h06a4308_8
   - jupyter_client=7.3.5=py310h06a4308_0
+  - jupyter_console=6.4.3=pyhd3eb1b0_0
   - jupyter_core=4.11.1=py310h06a4308_0
+  - jupyter_server=1.18.1=py310h06a4308_0
+  - jupyterlab=3.4.4=py310h06a4308_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_server=2.15.2=py310h06a4308_0
+  - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
   - kiwisolver=1.4.2=py310h295c915_0
   - krb5=1.19.2=hac12032_0
   - lame=3.100=h7b6447c_0
@@ -95,20 +115,27 @@ dependencies:
   - libxml2=2.9.14=h74e7548_0
   - libxslt=1.1.35=h4e12654_0
   - lz4-c=1.9.3=h295c915_1
+  - markupsafe=2.1.1=py310h7f8727e_0
   - matplotlib=3.5.2=py310h06a4308_0
   - matplotlib-base=3.5.2=py310hf590b9c_0
   - matplotlib-inline=0.1.6=py310h06a4308_0
+  - mistune=0.8.4=py310h7f8727e_1000
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py310ha2c4b55_0
   - mkl_fft=1.3.1=py310h2b4bcf5_1
   - mkl_random=1.2.2=py310h00e6091_0
   - monai=1.0.0=pyhd8ed1ab_0
   - munkres=1.1.4=py_0
+  - nbclassic=0.3.5=pyhd3eb1b0_0
+  - nbclient=0.5.13=py310h06a4308_0
+  - nbconvert=6.4.4=py310h06a4308_0
+  - nbformat=5.5.0=py310h06a4308_0
   - ncurses=6.3=h5eee18b_3
   - nest-asyncio=1.5.5=py310h06a4308_0
   - nettle=3.7.3=hbbd107a_1
   - nibabel=4.0.2=pyhd8ed1ab_0
   - ninja=1.11.0=h924138e_0
+  - notebook=6.4.12=py310h06a4308_0
   - nspr=4.33=h295c915_0
   - nss=3.74=h0370c37_0
   - numpy=1.23.1=py310h1794996_0
@@ -116,6 +143,7 @@ dependencies:
   - openh264=2.1.1=h4ff587b_0
   - openssl=1.1.1q=h7f8727e_0
   - packaging=21.3=pyhd3eb1b0_0
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pcre=8.45=h295c915_0
   - pexpect=4.8.0=pyhd3eb1b0_3
@@ -123,7 +151,9 @@ dependencies:
   - pillow=9.2.0=py310hace64e9_1
   - pip=22.2.2=py310h06a4308_0
   - ply=3.11=py310h06a4308_0
+  - prometheus_client=0.14.1=py310h06a4308_0
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
+  - prompt_toolkit=3.0.20=hd3eb1b0_0
   - psutil=5.9.0=py310h5eee18b_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
@@ -133,24 +163,34 @@ dependencies:
   - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.9=py310h06a4308_0
   - pyqt=5.15.7=py310h6a678d5_1
+  - pyrsistent=0.18.0=py310h7f8727e_0
   - pysocks=1.7.1=py310h06a4308_0
   - python=3.10.6=haa1d7c7_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.16.2=py310h06a4308_0
   - python_abi=3.10=2_cp310
   - pytorch=1.12.1=py3.10_cuda10.2_cudnn7.6.5_0
   - pytorch-mutex=1.0=cuda
+  - pytz=2022.1=py310h06a4308_0
   - pyzmq=23.2.0=py310h6a678d5_0
   - qt-main=5.15.2=h327a75a_7
   - qt-webengine=5.15.9=hd2b0992_4
+  - qtconsole=5.3.2=py310h06a4308_0
+  - qtpy=2.2.0=py310h06a4308_0
   - qtwebkit=5.212=h4eab89a_4
   - readline=8.1.2=h7f8727e_1
   - requests=2.28.1=py310h06a4308_0
   - scipy=1.8.1=py310h7612f91_0
+  - send2trash=1.8.0=pyhd3eb1b0_1
   - setuptools=63.4.1=py310h06a4308_0
   - sip=6.6.2=py310h6a678d5_0
   - six=1.16.0=pyh6c4a22f_0
+  - sniffio=1.2.0=py310h06a4308_1
+  - soupsieve=2.3.1=pyhd3eb1b0_0
   - sqlite=3.39.3=h5082296_0
   - stack_data=0.2.0=pyhd3eb1b0_0
+  - terminado=0.13.1=py310h06a4308_0
+  - testpath=0.6.0=py310h06a4308_0
   - tk=8.6.12=h1ccaba5_0
   - toml=0.10.2=pyhd3eb1b0_0
   - torchaudio=0.12.1=py310_cu102
@@ -162,7 +202,10 @@ dependencies:
   - tzdata=2022c=h04d1e81_0
   - urllib3=1.26.11=py310h06a4308_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py310h06a4308_1
+  - websocket-client=0.58.0=py310h06a4308_4
   - wheel=0.37.1=pyhd3eb1b0_0
+  - widgetsnbextension=3.5.2=py310h06a4308_0
   - xz=5.2.6=h5eee18b_0
   - zeromq=4.3.4=h2531618_0
   - zlib=1.2.12=h5eee18b_3
