--- a/env/environment.yml
+++ b/env/environment.yml
@@ -21,10 +21,10 @@ dependencies:
   - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.07.19=h06a4308_0
+  - ca-certificates=2022.9.24=ha878542_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2022.9.24=py310h06a4308_0
+  - certifi=2022.9.24=pyhd8ed1ab_0
   - cffi=1.15.1=py310h74dc2b5_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - cryptography=37.0.1=py310h9ce1e76_0
@@ -124,7 +124,7 @@ dependencies:
   - mkl-service=2.4.0=py310ha2c4b55_0
   - mkl_fft=1.3.1=py310h2b4bcf5_1
   - mkl_random=1.2.2=py310h00e6091_0
-  - monai=1.0.0=pyhd8ed1ab_0
+  - monai=1.0.1=pyhd8ed1ab_0
   - munkres=1.1.4=py_0
   - nbclassic=0.3.5=pyhd3eb1b0_0
   - nbclient=0.5.13=py310h06a4308_0
@@ -141,7 +141,7 @@ dependencies:
   - numpy=1.23.1=py310h1794996_0
   - numpy-base=1.23.1=py310hcba007f_0
   - openh264=2.1.1=h4ff587b_0
-  - openssl=1.1.1q=h7f8727e_0
+  - openssl=1.1.1s=h7f8727e_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
