--- a/env/environment.yml
+++ b/env/environment.yml
@@ -1,154 +1,217 @@
 name: MONAI-BRATS
 channels:
+  - conda-forge
+  - pytorch
   - defaults
 dependencies:
-  - _libgcc_mutex==0.1=main
-  - glib==2.69.1=h4ff587b_1
-  - lcms2==2.12=h3be6417_0
-  - brotlipy==0.7.0=py310h7f8727e_1002
-  - setuptools==63.4.1=py310h06a4308_0
-  - libbrotlidec==1.0.9=h5eee18b_7
-  - urllib3==1.26.11=py310h06a4308_0
-  - libidn2==2.3.2=h7f8727e_0
-  - decorator==5.1.1=pyhd3eb1b0_0
-  - blas==1.0=mkl
-  - pyopenssl==22.0.0=pyhd3eb1b0_0
-  - pyqt==5.15.7=py310h6a678d5_1
-  - idna==3.3=pyhd3eb1b0_0
-  - six==1.16.0=pyh6c4a22f_0
-  - jupyter_client==7.3.5=py310h06a4308_0
-  - python==3.10.6=haa1d7c7_0
-  - nettle==3.7.3=hbbd107a_1
-  - tzdata==2022c=h04d1e81_0
-  - matplotlib-inline==0.1.6=py310h06a4308_0
-  - cycler==0.11.0=pyhd3eb1b0_0
-  - toml==0.10.2=pyhd3eb1b0_0
-  - pip==22.2.2=py310h06a4308_0
-  - mkl_random==1.2.2=py310h00e6091_0
-  - torchaudio==0.12.1=py310_cu102
-  - zlib==1.2.12=h5eee18b_3
-  - libstdcxx-ng==11.2.0=h1234567_1
-  - libbrotlienc==1.0.9=h5eee18b_7
-  - zeromq==4.3.4=h2531618_0
-  - ipython==8.4.0=py310h06a4308_0
-  - libgcc-ng==11.2.0=h1234567_1
-  - zstd==1.5.2=ha4553b6_0
-  - libiconv==1.16=h7f8727e_2
-  - numpy-base==1.23.1=py310hcba007f_0
-  - libxml2==2.9.14=h74e7548_0
-  - fonttools==4.25.0=pyhd3eb1b0_0
-  - jpeg==9e=h7f8727e_0
-  - debugpy==1.5.1=py310h295c915_0
-  - icu==58.2=he6710b0_3
-  - lame==3.100=h7b6447c_0
-  - asttokens==2.0.5=pyhd3eb1b0_0
-  - libpng==1.6.37=hbc83047_0
-  - xz==5.2.6=h5eee18b_0
-  - jedi==0.18.1=py310h06a4308_1
-  - dbus==1.13.18=hb2f20db_0
-  - libwebp-base==1.2.4=h5eee18b_0
-  - libpq==12.9=h16c4e8d_3
-  - mkl_fft==1.3.1=py310h2b4bcf5_1
-  - parso==0.8.3=pyhd3eb1b0_0
-  - ld_impl_linux-64==2.38=h1181459_1
-  - entrypoints==0.4=py310h06a4308_0
-  - qt-webengine==5.15.9=hd2b0992_4
-  - matplotlib==3.5.2=py310h06a4308_0
-  - ipykernel==6.15.2=py310h06a4308_0
-  - brotli==1.0.9=h5eee18b_7
-  - libdeflate==1.8=h7f8727e_5
-  - libxcb==1.15=h7f8727e_0
-  - libffi==3.3=he6710b0_2
-  - pure_eval==0.2.2=pyhd3eb1b0_0
-  - libedit==3.1.20210910=h7f8727e_0
-  - libwebp==1.2.4=h11a3e52_0
-  - ply==3.11=py310h06a4308_0
-  - python-dateutil==2.8.2=pyhd3eb1b0_0
-  - kiwisolver==1.4.2=py310h295c915_0
-  - tornado==6.2=py310h5eee18b_0
-  - fontconfig==2.13.1=h6c09931_0
-  - openssl
-  - pillow==9.2.0=py310hace64e9_1
-  - libunistring==0.9.10=h27cfd23_0
-  - pygments==2.11.2=pyhd3eb1b0_0
-  - bzip2==1.0.8=h7b6447c_0
-  - ninja==1.11.0=h924138e_0
-  - cryptography==37.0.1=py310h9ce1e76_0
-  - numpy==1.23.1=py310h1794996_0
-  - pyparsing==3.0.9=py310h06a4308_0
-  - jupyter_core==4.11.1=py310h06a4308_0
-  - _openmp_mutex==5.1=1_gnu
-  - intel-openmp==2021.4.0=h06a4308_3561
-  - wcwidth==0.2.5=pyhd3eb1b0_0
-  - packaging==21.3=pyhd3eb1b0_0
-  - matplotlib-base==3.5.2=py310hf590b9c_0
-  - nspr==4.33=h295c915_0
-  - munkres==1.1.4=py_0
-  - sqlite==3.39.3=h5082296_0
-  - cudatoolkit==10.2.89=hfd86e86_1
-  - requests==2.28.1=py310h06a4308_0
-  - tk==8.6.12=h1ccaba5_0
-  - ncurses==6.3=h5eee18b_3
-  - freetype==2.11.0=h70c0345_0
-  - torchvision==0.13.1=py310_cu102
-  - gnutls==3.6.15=he1e5248_0
-  - lerc==3.0=h295c915_0
-  - mkl==2021.4.0=h06a4308_640
-  - libsodium==1.0.18=h7b6447c_0
-  - stack_data==0.2.0=pyhd3eb1b0_0
-  - ca-certificates
-  - ffmpeg==4.3=hf484d3e_0
-  - python_abi==3.10=2_cp310
-  - backcall==0.2.0=pyhd3eb1b0_0
-  - psutil==5.9.0=py310h5eee18b_0
-  - traitlets==5.1.1=pyhd3eb1b0_0
-  - executing==0.8.3=pyhd3eb1b0_0
-  - monai
-  - giflib==5.2.1=h7b6447c_0
-  - typing_extensions==4.4.0=pyha770c72_0
-  - gmp==6.2.1=h295c915_3
-  - pysocks==1.7.1=py310h06a4308_0
-  - pexpect==4.8.0=pyhd3eb1b0_3
-  - libclang==10.0.1=default_hb85057a_2
-  - pycparser==2.21=pyhd8ed1ab_0
-  - readline==8.1.2=h7f8727e_1
-  - libxkbcommon==1.0.1=hfa300c1_0
-  - nest-asyncio==1.5.5=py310h06a4308_0
-  - gstreamer==1.14.0=h28cd5cc_2
-  - libuuid==1.0.3=h7f8727e_2
-  - expat==2.4.9=h6a678d5_0
-  - libbrotlicommon==1.0.9=h5eee18b_7
-  - certifi
-  - qt-main==5.15.2=h327a75a_7
-  - wheel==0.37.1=pyhd3eb1b0_0
-  - libxslt==1.1.35=h4e12654_0
-  - pytorch-mutex==1.0=cuda
-  - pcre==8.45=h295c915_0
-  - qtwebkit==5.212=h4eab89a_4
-  - libgomp==11.2.0=h1234567_1
-  - pyzmq==23.2.0=py310h6a678d5_0
-  - prompt-toolkit==3.0.20=pyhd3eb1b0_0
-  - lz4-c==1.9.3=h295c915_1
-  - pickleshare==0.7.5=pyhd3eb1b0_1003
-  - libevent==2.1.12=h8f2d780_0
-  - krb5==1.19.2=hac12032_0
-  - pytorch==1.12.1=py3.10_cuda10.2_cudnn7.6.5_0
-  - libtiff==4.4.0=hecacb30_0
-  - nss==3.74=h0370c37_0
-  - openh264==2.1.1=h4ff587b_0
-  - typing-extensions==4.4.0=hd8ed1ab_0
-  - charset-normalizer==2.0.4=pyhd3eb1b0_0
-  - sip==6.6.2=py310h6a678d5_0
-  - libtasn1==4.16.0=h27cfd23_0
-  - cffi==1.15.1=py310h74dc2b5_0
-  - future==0.18.2=py310hff52083_5
-  - brotli-bin==1.0.9=h5eee18b_7
-  - gst-plugins-base==1.14.0=h8213a91_2
-  - libllvm10==10.0.1=hbcb73fb_5
-  - mkl-service==2.4.0=py310ha2c4b55_0
-  - ptyprocess==0.7.0=pyhd3eb1b0_2
-  - ignite
-  - nibabel
-  - jupyter
-  - pandas
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=5.1
+  - anyio=3.5.0
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - asttokens=2.0.5
+  - attrs=21.4.0
+  - babel=2.9.1
+  - backcall=0.2.0
+  - beautifulsoup4=4.11.1
+  - blas=1.0
+  - bleach=4.1.0
+  - bottleneck=1.3.5
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - ca-certificates=2022.10.11
+  - certifi=2022.9.24
+  - cffi=1.15.1
+  - charset-normalizer=2.0.4
+  - cryptography=38.0.1
+  - cudatoolkit=10.2.89
+  - cycler=0.11.0
+  - dbus=1.13.18
+  - debugpy=1.5.1
+  - decorator=5.1.1
+  - defusedxml=0.7.1
+  - entrypoints=0.4
+  - executing=0.8.3
+  - expat=2.4.9
+  - ffmpeg=4.2.2
+  - fftw=3.3.9
+  - fontconfig=2.13.1
+  - fonttools=4.25.0
+  - freetype=2.12.1
+  - future=0.18.2
+  - giflib=5.2.1
+  - glib=2.69.1
+  - gmp=6.2.1
+  - gnutls=3.6.15
+  - gst-plugins-base=1.14.0
+  - gstreamer=1.14.0
+  - h5py=3.7.0
+  - hdf5=1.10.6
+  - icu=58.2
+  - idna=3.4
+  - ignite=0.4.10
+  - intel-openmp=2021.4.0
+  - ipykernel=6.15.2
+  - ipython=8.4.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.6.5
+  - jedi=0.18.1
+  - jinja2=3.1.2
+  - jpeg=9e
+  - json5=0.9.6
+  - jsonschema=4.16.0
+  - jupyter=1.0.0
+  - jupyter_client=7.3.5
+  - jupyter_console=6.4.3
+  - jupyter_core=4.11.1
+  - jupyter_server=1.18.1
+  - jupyterlab=3.4.4
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_server=2.15.2
+  - jupyterlab_widgets=1.0.0
+  - kiwisolver=1.4.2
+  - krb5=1.19.2
+  - lame=3.100
+  - lcms2=2.12
+  - ld_impl_linux-64=2.38
+  - lerc=3.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libclang=10.0.1
+  - libdeflate=1.8
+  - libedit=3.1.20210910
+  - libevent=2.1.12
+  - libffi=3.3
+  - libgcc-ng=11.2.0
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libgomp=11.2.0
+  - libiconv=1.16
+  - libidn2=2.3.2
+  - libllvm10=10.0.1
+  - libopus=1.3.1
+  - libpng=1.6.37
+  - libpq=12.9
+  - libsodium=1.0.18
+  - libstdcxx-ng=11.2.0
+  - libtasn1=4.16.0
+  - libtiff=4.4.0
+  - libunistring=0.9.10
+  - libuuid=1.0.3
+  - libvpx=1.7.0
+  - libwebp=1.2.4
+  - libwebp-base=1.2.4
+  - libxcb=1.15
+  - libxkbcommon=1.0.1
+  - libxml2=2.9.14
+  - libxslt=1.1.35
+  - lz4-c=1.9.3
+  - markupsafe=2.1.1
+  - matplotlib=3.5.3
+  - matplotlib-base=3.5.3
+  - matplotlib-inline=0.1.6
+  - mistune=0.8.4
+  - mkl=2021.4.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.1
+  - mkl_random=1.2.2
+  - monai=1.0.1
+  - munkres=1.1.4
+  - nbclassic=0.3.5
+  - nbclient=0.5.13
+  - nbconvert=6.4.4
+  - nbformat=5.5.0
+  - ncurses=6.3
+  - nest-asyncio=1.5.5
+  - nettle=3.7.3
+  - nibabel=4.0.2
+  - ninja=1.10.2
+  - ninja-base=1.10.2
+  - notebook=6.4.12
+  - nspr=4.33
+  - nss=3.74
+  - numexpr=2.8.3
+  - numpy=1.23.3
+  - numpy-base=1.23.3
+  - openh264=2.1.1
+  - openssl=1.1.1s
+  - packaging=21.3
+  - pandas=1.4.4
+  - pandocfilters=1.5.0
+  - parso=0.8.3
+  - pcre=8.45
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=9.2.0
+  - pip=22.2.2
+  - ply=3.11
+  - prometheus_client=0.14.1
+  - prompt-toolkit=3.0.20
+  - prompt_toolkit=3.0.20
+  - psutil=5.9.0
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pycparser=2.21
+  - pydicom=2.3.0
+  - pygments=2.11.2
+  - pyopenssl=22.0.0
+  - pyparsing=3.0.9
+  - pyqt=5.15.7
+  - pyrsistent=0.18.0
+  - pysocks=1.7.1
+  - python=3.10.6
+  - python-dateutil=2.8.2
+  - python-fastjsonschema=2.16.2
+  - python_abi=3.10
+  - pytorch=1.12.1
+  - pytorch-mutex=1.0
+  - pytz=2022.1
+  - pyzmq=23.2.0
+  - qt-main=5.15.2
+  - qt-webengine=5.15.9
+  - qtconsole=5.3.2
+  - qtpy=2.2.0
+  - qtwebkit=5.212
+  - readline=8.2
+  - requests=2.28.1
+  - scipy=1.9.3
+  - send2trash=1.8.0
+  - setuptools=65.5.0
+  - sip=6.6.2
+  - six=1.16.0
+  - sniffio=1.2.0
+  - soupsieve=2.3.2.post1
+  - sqlite=3.39.3
+  - stack_data=0.2.0
+  - terminado=0.13.1
+  - testpath=0.6.0
+  - tk=8.6.12
+  - toml=0.10.2
+  - torchaudio=0.12.1
+  - torchvision=0.13.1
+  - tornado=6.2
+  - traitlets=5.1.1
+  - typing-extensions=4.3.0
+  - typing_extensions=4.3.0
+  - tzdata=2022f
+  - urllib3=1.26.12
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - websocket-client=0.58.0
+  - wheel=0.37.1
+  - widgetsnbextension=3.5.2
+  - x264=1!157.20191217
+  - xz=5.2.6
+  - zeromq=4.3.4
+  - zlib=1.2.13
+  - zstd=1.5.2
+  - pip:
+      - colorama==0.4.5
+      - monai-deploy-app-sdk==0.4.0
+      - networkx==2.8.7
+      - pyqt5-sip==12.11.0
+      - typeguard==2.13.3
 prefix: /home/raffi/anaconda3/envs/MONAI-BRATS
