--- a/env/environment.yml
+++ b/env/environment.yml
@@ -1,217 +1,304 @@
 name: MONAI-BRATS
 channels:
-  - conda-forge
   - pytorch
+  - nvidia
+  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=5.1
-  - anyio=3.5.0
-  - argon2-cffi=21.3.0
-  - argon2-cffi-bindings=21.2.0
-  - asttokens=2.0.5
-  - attrs=21.4.0
-  - babel=2.9.1
-  - backcall=0.2.0
-  - beautifulsoup4=4.11.1
-  - blas=1.0
-  - bleach=4.1.0
-  - bottleneck=1.3.5
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - brotlipy=0.7.0
-  - bzip2=1.0.8
-  - ca-certificates=2022.10.11
-  - certifi=2022.9.24
-  - cffi=1.15.1
-  - charset-normalizer=2.0.4
-  - cryptography=38.0.1
-  - cudatoolkit=10.2.89
-  - cycler=0.11.0
-  - dbus=1.13.18
-  - debugpy=1.5.1
-  - decorator=5.1.1
-  - defusedxml=0.7.1
-  - entrypoints=0.4
-  - executing=0.8.3
-  - expat=2.4.9
-  - ffmpeg=4.2.2
-  - fftw=3.3.9
-  - fontconfig=2.13.1
-  - fonttools=4.25.0
-  - freetype=2.12.1
-  - future=0.18.2
-  - giflib=5.2.1
-  - glib=2.69.1
-  - gmp=6.2.1
-  - gnutls=3.6.15
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
-  - h5py=3.7.0
-  - hdf5=1.10.6
-  - icu=58.2
-  - idna=3.4
-  - ignite=0.4.10
-  - intel-openmp=2021.4.0
-  - ipykernel=6.15.2
-  - ipython=8.4.0
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.6.5
-  - jedi=0.18.1
-  - jinja2=3.1.2
-  - jpeg=9e
-  - json5=0.9.6
-  - jsonschema=4.16.0
-  - jupyter=1.0.0
-  - jupyter_client=7.3.5
-  - jupyter_console=6.4.3
-  - jupyter_core=4.11.1
-  - jupyter_server=1.18.1
-  - jupyterlab=3.4.4
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_server=2.15.2
-  - jupyterlab_widgets=1.0.0
-  - kiwisolver=1.4.2
-  - krb5=1.19.2
-  - lame=3.100
-  - lcms2=2.12
-  - ld_impl_linux-64=2.38
-  - lerc=3.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libclang=10.0.1
-  - libdeflate=1.8
-  - libedit=3.1.20210910
-  - libevent=2.1.12
-  - libffi=3.3
-  - libgcc-ng=11.2.0
-  - libgfortran-ng=11.2.0
-  - libgfortran5=11.2.0
-  - libgomp=11.2.0
-  - libiconv=1.16
-  - libidn2=2.3.2
-  - libllvm10=10.0.1
-  - libopus=1.3.1
-  - libpng=1.6.37
-  - libpq=12.9
-  - libsodium=1.0.18
-  - libstdcxx-ng=11.2.0
-  - libtasn1=4.16.0
-  - libtiff=4.4.0
-  - libunistring=0.9.10
-  - libuuid=1.0.3
-  - libvpx=1.7.0
-  - libwebp=1.2.4
-  - libwebp-base=1.2.4
-  - libxcb=1.15
-  - libxkbcommon=1.0.1
-  - libxml2=2.9.14
-  - libxslt=1.1.35
-  - lz4-c=1.9.3
-  - markupsafe=2.1.1
-  - matplotlib=3.5.3
-  - matplotlib-base=3.5.3
-  - matplotlib-inline=0.1.6
-  - mistune=0.8.4
-  - mkl=2021.4.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.1
-  - mkl_random=1.2.2
-  - monai=1.0.1
-  - munkres=1.1.4
-  - nbclassic=0.3.5
-  - nbclient=0.5.13
-  - nbconvert=6.4.4
-  - nbformat=5.5.0
-  - ncurses=6.3
-  - nest-asyncio=1.5.5
-  - nettle=3.7.3
-  - nibabel=4.0.2
-  - ninja=1.10.2
-  - ninja-base=1.10.2
-  - notebook=6.4.12
-  - nspr=4.33
-  - nss=3.74
-  - numexpr=2.8.3
-  - numpy=1.23.3
-  - numpy-base=1.23.3
-  - openh264=2.1.1
-  - openssl=1.1.1s
-  - packaging=21.3
-  - pandas=1.4.4
-  - pandocfilters=1.5.0
-  - parso=0.8.3
-  - pcre=8.45
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pillow=9.2.0
-  - pip=22.2.2
-  - ply=3.11
-  - prometheus_client=0.14.1
-  - prompt-toolkit=3.0.20
-  - prompt_toolkit=3.0.20
-  - psutil=5.9.0
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.2
-  - pycparser=2.21
-  - pydicom=2.3.0
-  - pygments=2.11.2
-  - pyopenssl=22.0.0
-  - pyparsing=3.0.9
-  - pyqt=5.15.7
-  - pyrsistent=0.18.0
-  - pysocks=1.7.1
-  - python=3.10.6
-  - python-dateutil=2.8.2
-  - python-fastjsonschema=2.16.2
-  - python_abi=3.10
-  - pytorch=1.12.1
-  - pytorch-mutex=1.0
-  - pytz=2022.1
-  - pyzmq=23.2.0
-  - qt-main=5.15.2
-  - qt-webengine=5.15.9
-  - qtconsole=5.3.2
-  - qtpy=2.2.0
-  - qtwebkit=5.212
-  - readline=8.2
-  - requests=2.28.1
-  - scipy=1.9.3
-  - send2trash=1.8.0
-  - setuptools=65.5.0
-  - sip=6.6.2
-  - six=1.16.0
-  - sniffio=1.2.0
-  - soupsieve=2.3.2.post1
-  - sqlite=3.39.3
-  - stack_data=0.2.0
-  - terminado=0.13.1
-  - testpath=0.6.0
-  - tk=8.6.12
-  - toml=0.10.2
-  - torchaudio=0.12.1
-  - torchvision=0.13.1
-  - tornado=6.2
-  - traitlets=5.1.1
-  - typing-extensions=4.3.0
-  - typing_extensions=4.3.0
-  - tzdata=2022f
-  - urllib3=1.26.12
-  - wcwidth=0.2.5
-  - webencodings=0.5.1
-  - websocket-client=0.58.0
-  - wheel=0.37.1
-  - widgetsnbextension=3.5.2
-  - x264=1!157.20191217
-  - xz=5.2.6
-  - zeromq=4.3.4
-  - zlib=1.2.13
-  - zstd=1.5.2
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - blas=1.0=mkl
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2022.12.7=ha878542_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - cuda=11.6.2=0
+  - cuda-cccl=11.6.55=hf6102b2_0
+  - cuda-command-line-tools=11.6.2=0
+  - cuda-compiler=11.6.2=0
+  - cuda-cudart=11.6.55=he381448_0
+  - cuda-cudart-dev=11.6.55=h42ad0f4_0
+  - cuda-cuobjdump=11.6.124=h2eeebcb_0
+  - cuda-cupti=11.6.124=h86345e5_0
+  - cuda-cuxxfilt=11.6.124=hecbf4f6_0
+  - cuda-driver-dev=11.6.55=0
+  - cuda-gdb=11.8.86=0
+  - cuda-libraries=11.6.2=0
+  - cuda-libraries-dev=11.6.2=0
+  - cuda-memcheck=11.8.86=0
+  - cuda-nsight=11.8.86=0
+  - cuda-nsight-compute=11.8.0=0
+  - cuda-nvcc=11.6.124=hbba6d2d_0
+  - cuda-nvdisasm=11.8.86=0
+  - cuda-nvml-dev=11.6.55=haa9ef22_0
+  - cuda-nvprof=11.8.87=0
+  - cuda-nvprune=11.6.124=he22ec0a_0
+  - cuda-nvrtc=11.6.124=h020bade_0
+  - cuda-nvrtc-dev=11.6.124=h249d397_0
+  - cuda-nvtx=11.6.124=h0630a44_0
+  - cuda-nvvp=11.8.87=0
+  - cuda-runtime=11.6.2=0
+  - cuda-samples=11.6.101=h8efea70_0
+  - cuda-sanitizer-api=11.8.86=0
+  - cuda-toolkit=11.6.2=0
+  - cuda-tools=11.6.2=0
+  - cuda-visual-tools=11.6.2=0
+  - ffmpeg=4.3=hf484d3e_0
+  - flit-core=3.6.0=pyhd3eb1b0_0
+  - freetype=2.12.1=h4a9f257_0
+  - gds-tools=1.4.0.31=0
+  - giflib=5.2.1=h7b6447c_0
+  - gmp=6.2.1=h295c915_3
+  - gnutls=3.6.15=he1e5248_0
+  - intel-openmp=2021.4.0=h06a4308_3561
+  - jpeg=9e=h7f8727e_0
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libcublas=11.11.3.6=0
+  - libcublas-dev=11.11.3.6=0
+  - libcufft=10.9.0.58=0
+  - libcufft-dev=10.9.0.58=0
+  - libcufile=1.4.0.31=0
+  - libcufile-dev=1.4.0.31=0
+  - libcurand=10.3.0.86=0
+  - libcurand-dev=10.3.0.86=0
+  - libcusolver=11.4.1.48=0
+  - libcusolver-dev=11.4.1.48=0
+  - libcusparse=11.7.5.86=0
+  - libcusparse-dev=11.7.5.86=0
+  - libdeflate=1.8=h7f8727e_5
+  - libffi=3.4.2=h6a678d5_6
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h7f8727e_2
+  - libidn2=2.3.2=h7f8727e_0
+  - libnpp=11.8.0.86=0
+  - libnpp-dev=11.8.0.86=0
+  - libnvjpeg=11.9.0.86=0
+  - libnvjpeg-dev=11.9.0.86=0
+  - libpng=1.6.37=hbc83047_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.16.0=h27cfd23_0
+  - libtiff=4.4.0=hecacb30_2
+  - libunistring=0.9.10=h27cfd23_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libwebp=1.2.4=h11a3e52_0
+  - libwebp-base=1.2.4=h5eee18b_0
+  - lz4-c=1.9.3=h295c915_1
+  - mkl=2021.4.0=h06a4308_640
+  - mkl_fft=1.3.1=py310hd6ae3a3_0
+  - mkl_random=1.2.2=py310h00e6091_0
+  - monai=1.0.1=pyhd8ed1ab_0
+  - ncurses=6.3=h5eee18b_3
+  - nettle=3.7.3=hbbd107a_1
+  - nsight-compute=2022.3.0.22=0
+  - numpy-base=1.23.4=py310h8e6c178_0
+  - openh264=2.1.1=h4ff587b_0
+  - openssl=1.1.1s=h7f8727e_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - python=3.10.8=h7a1cb2a_1
+  - pytorch=1.13.0=py3.10_cuda11.6_cudnn8.3.2_0
+  - pytorch-cuda=11.6=h867d48c_0
+  - pytorch-mutex=1.0=cuda
+  - readline=8.2=h5eee18b_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sqlite=3.40.0=h5082296_0
+  - tk=8.6.12=h1ccaba5_0
+  - typing_extensions=4.4.0=py310h06a4308_0
+  - tzdata=2022g=h04d1e81_0
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - xz=5.2.8=h5eee18b_0
+  - zlib=1.2.13=h5eee18b_0
+  - zstd=1.5.2=ha4553b6_0
   - pip:
-      - colorama==0.4.5
-      - monai-deploy-app-sdk==0.4.0
-      - networkx==2.8.7
-      - pyqt5-sip==12.11.0
+      - absl-py==1.3.0
+      - alabaster==0.7.12
+      - alembic==1.8.1
+      - astor==0.8.1
+      - astroid==2.12.13
+      - attrs==22.1.0
+      - autopage==0.5.1
+      - babel==2.11.0
+      - beautifulsoup4==4.11.1
+      - black==22.10.0
+      - brotlipy==0.7.0
+      - cachetools==5.2.0
+      - cffi==1.15.1
+      - cfgv==3.3.1
+      - click==8.1.3
+      - cliff==4.1.0
+      - cloudpickle==2.2.0
+      - cmaes==0.9.0
+      - cmd2==2.4.2
+      - colorama==0.4.6
+      - colorlog==6.7.0
+      - commonmark==0.9.1
+      - contextlib2==21.6.0
+      - contourpy==1.0.6
+      - coverage==6.5.0
+      - cryptography==38.0.1
+      - cucim==22.8.1
+      - cycler==0.11.0
+      - databricks-cli==0.17.4
+      - dill==0.3.6
+      - distlib==0.3.6
+      - docker==6.0.1
+      - docutils==0.16
+      - einops==0.6.0
+      - entrypoints==0.4
+      - filelock==3.8.2
+      - fire==0.4.0
+      - flake8==6.0.0
+      - flake8-bugbear==22.12.6
+      - flake8-comprehensions==3.10.1
+      - flake8-executable==2.1.2
+      - flask==2.2.2
+      - fonttools==4.38.0
+      - gdown==4.6.0
+      - gitdb==4.0.10
+      - gitpython==3.1.29
+      - google-auth==2.15.0
+      - google-auth-oauthlib==0.4.6
+      - greenlet==2.0.1
+      - grpcio==1.51.1
+      - gunicorn==20.1.0
+      - h5py==3.7.0
+      - huggingface-hub==0.11.1
+      - identify==2.5.9
+      - idna==3.4
+      - imagecodecs==2022.9.26
+      - imageio==2.22.4
+      - imagesize==1.4.1
+      - importlab==0.8
+      - importlib-metadata==4.13.0
+      - isort==5.10.1
+      - itsdangerous==2.1.2
+      - jinja2==3.1.2
+      - joblib==1.2.0
+      - json-tricks==3.16.1
+      - jsonschema==4.17.3
+      - kiwisolver==1.4.4
+      - lazy-object-proxy==1.8.0
+      - libcst==0.4.9
+      - llvmlite==0.39.1
+      - lmdb==1.4.0
+      - mako==1.2.4
+      - markdown==3.4.1
+      - markupsafe==2.1.1
+      - matplotlib==3.6.2
+      - mccabe==0.7.0
+      - mkl-fft==1.3.1
+      - mkl-random==1.2.2
+      - mkl-service==2.4.0
+      - mlflow==2.0.1
+      - mypy==0.991
+      - mypy-extensions==0.4.3
+      - networkx==2.8.3
+      - nibabel==4.0.2
+      - ninja==1.11.1
+      - nni==2.10
+      - nodeenv==1.7.0
+      - nptyping==2.4.1
+      - numba==0.56.4
+      - numpy==1.23.5
+      - oauthlib==3.2.2
+      - openslide-python==1.1.2
+      - optuna==3.0.4
+      - packaging==21.3
+      - pandas==1.5.2
+      - parameterized==0.8.1
+      - pathspec==0.10.2
+      - pbr==5.11.0
+      - pep8-naming==0.13.2
+      - pillow==9.3.0
+      - pip==22.2.2
+      - platformdirs==2.6.0
+      - pre-commit==2.20.0
+      - prettytable==3.5.0
+      - protobuf==3.20.1
+      - psutil==5.9.4
+      - pyarrow==10.0.1
+      - pyasn1==0.4.8
+      - pyasn1-modules==0.2.8
+      - pycodestyle==2.10.0
+      - pydicom==2.3.1
+      - pydot==1.4.2
+      - pyflakes==3.0.1
+      - pygments==2.13.0
+      - pyjwt==2.6.0
+      - pylint==2.15.8
+      - pynrrd==1.0.0
+      - pyparsing==3.0.9
+      - pyperclip==1.8.2
+      - pyrsistent==0.19.2
+      - pysocks==1.7.1
+      - python-dateutil==2.8.2
+      - pythonwebhdfs==0.2.3
+      - pytorch-ignite==0.4.10
+      - pytype==2022.11.29
+      - pytz==2022.6
+      - pywavelets==1.4.1
+      - pyyaml==6.0
+      - querystring-parser==1.2.4
+      - recommonmark==0.6.0
+      - regex==2022.10.31
+      - requests==2.28.1
+      - requests-oauthlib==1.3.1
+      - responses==0.22.0
+      - rsa==4.9
+      - schema==0.7.5
+      - scikit-image==0.19.3
+      - scikit-learn==1.1.3
+      - scipy==1.8.1
+      - setuptools==65.6.3
+      - shap==0.41.0
+      - simplejson==3.18.0
+      - slicer==0.0.7
+      - smmap==5.0.0
+      - snowballstemmer==2.2.0
+      - soupsieve==2.3.2.post1
+      - sphinx==3.5.3
+      - sphinx-autodoc-typehints==1.11.1
+      - sphinx-rtd-theme==0.5.2
+      - sphinxcontrib-applehelp==1.0.2
+      - sphinxcontrib-devhelp==1.0.2
+      - sphinxcontrib-htmlhelp==2.0.0
+      - sphinxcontrib-jsmath==1.0.1
+      - sphinxcontrib-qthelp==1.0.3
+      - sphinxcontrib-serializinghtml==1.1.5
+      - sqlalchemy==1.4.44
+      - sqlparse==0.4.3
+      - stevedore==4.1.1
+      - tabulate==0.9.0
+      - tensorboard==2.11.0
+      - tensorboard-data-server==0.6.1
+      - tensorboard-plugin-wit==1.8.1
+      - tensorboardx==2.5.1
+      - termcolor==2.1.1
+      - threadpoolctl==3.1.0
+      - tifffile==2022.10.10
+      - tokenizers==0.12.1
+      - toml==0.10.2
+      - tomli==2.0.1
+      - tomlkit==0.11.6
+      - torch==1.13.0
+      - torchvision==0.14.0
+      - tqdm==4.64.1
+      - transformers==4.21.3
       - typeguard==2.13.3
-prefix: /home/raffi/anaconda3/envs/MONAI-BRATS
+      - types-pkg-resources==0.1.3
+      - types-pyyaml==6.0.12.2
+      - types-toml==0.10.8.1
+      - typing-extensions==4.4.0
+      - typing-inspect==0.8.0
+      - urllib3==1.26.12
+      - virtualenv==20.17.1
+      - wcwidth==0.2.5
+      - websocket-client==1.4.2
+      - websockets==10.4
+      - werkzeug==2.2.2
+      - wrapt==1.14.1
+      - zipp==3.11.0
