--- a/env/environment.yml
+++ b/env/environment.yml
@@ -1,16 +1,15 @@
 name: MONAI-BRATS
 channels:
   - pytorch
-  - nvidia
   - conda-forge
+  - nvidia
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - blas=1.0=mkl
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.12.7=ha878542_0
-  - certifi=2022.12.7=pyhd8ed1ab_0
+  - ca-certificates=2022.10.11=h06a4308_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - cuda=11.6.2=0
   - cuda-cccl=11.6.55=hf6102b2_0
@@ -22,31 +21,32 @@ dependencies:
   - cuda-cupti=11.6.124=h86345e5_0
   - cuda-cuxxfilt=11.6.124=hecbf4f6_0
   - cuda-driver-dev=11.6.55=0
-  - cuda-gdb=11.8.86=0
+  - cuda-gdb=12.0.90=0
   - cuda-libraries=11.6.2=0
   - cuda-libraries-dev=11.6.2=0
   - cuda-memcheck=11.8.86=0
-  - cuda-nsight=11.8.86=0
-  - cuda-nsight-compute=11.8.0=0
+  - cuda-nsight=12.0.78=0
+  - cuda-nsight-compute=12.0.0=0
   - cuda-nvcc=11.6.124=hbba6d2d_0
-  - cuda-nvdisasm=11.8.86=0
+  - cuda-nvdisasm=12.0.76=0
   - cuda-nvml-dev=11.6.55=haa9ef22_0
-  - cuda-nvprof=11.8.87=0
+  - cuda-nvprof=12.0.90=0
   - cuda-nvprune=11.6.124=he22ec0a_0
   - cuda-nvrtc=11.6.124=h020bade_0
   - cuda-nvrtc-dev=11.6.124=h249d397_0
   - cuda-nvtx=11.6.124=h0630a44_0
-  - cuda-nvvp=11.8.87=0
+  - cuda-nvvp=12.0.90=0
   - cuda-runtime=11.6.2=0
   - cuda-samples=11.6.101=h8efea70_0
-  - cuda-sanitizer-api=11.8.86=0
+  - cuda-sanitizer-api=12.0.90=0
   - cuda-toolkit=11.6.2=0
   - cuda-tools=11.6.2=0
   - cuda-visual-tools=11.6.2=0
+  - cudatoolkit=11.6.0=hecad31d_10
   - ffmpeg=4.3=hf484d3e_0
-  - flit-core=3.6.0=pyhd3eb1b0_0
   - freetype=2.12.1=h4a9f257_0
-  - gds-tools=1.4.0.31=0
+  - future=0.18.2=pyhd8ed1ab_6
+  - gds-tools=1.5.0.59=0
   - giflib=5.2.1=h7b6447c_0
   - gmp=6.2.1=h295c915_3
   - gnutls=3.6.15=he1e5248_0
@@ -56,28 +56,28 @@ dependencies:
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=3.0=h295c915_0
-  - libcublas=11.11.3.6=0
-  - libcublas-dev=11.11.3.6=0
-  - libcufft=10.9.0.58=0
-  - libcufft-dev=10.9.0.58=0
-  - libcufile=1.4.0.31=0
-  - libcufile-dev=1.4.0.31=0
-  - libcurand=10.3.0.86=0
-  - libcurand-dev=10.3.0.86=0
-  - libcusolver=11.4.1.48=0
-  - libcusolver-dev=11.4.1.48=0
-  - libcusparse=11.7.5.86=0
-  - libcusparse-dev=11.7.5.86=0
+  - libcublas=12.0.1.189=0
+  - libcublas-dev=12.0.1.189=0
+  - libcufft=11.0.0.21=0
+  - libcufft-dev=11.0.0.21=0
+  - libcufile=1.5.0.59=0
+  - libcufile-dev=1.5.0.59=0
+  - libcurand=10.3.1.50=0
+  - libcurand-dev=10.3.1.50=0
+  - libcusolver=11.4.2.57=0
+  - libcusolver-dev=11.4.2.57=0
+  - libcusparse=12.0.0.76=0
+  - libcusparse-dev=12.0.0.76=0
   - libdeflate=1.8=h7f8727e_5
   - libffi=3.4.2=h6a678d5_6
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libiconv=1.16=h7f8727e_2
   - libidn2=2.3.2=h7f8727e_0
-  - libnpp=11.8.0.86=0
-  - libnpp-dev=11.8.0.86=0
-  - libnvjpeg=11.9.0.86=0
-  - libnvjpeg-dev=11.9.0.86=0
+  - libnpp=12.0.0.30=0
+  - libnpp-dev=12.0.0.30=0
+  - libnvjpeg=12.0.0.28=0
+  - libnvjpeg-dev=12.0.0.28=0
   - libpng=1.6.37=hbc83047_0
   - libstdcxx-ng=11.2.0=h1234567_1
   - libtasn1=4.16.0=h27cfd23_0
@@ -88,29 +88,32 @@ dependencies:
   - libwebp-base=1.2.4=h5eee18b_0
   - lz4-c=1.9.3=h295c915_1
   - mkl=2021.4.0=h06a4308_640
-  - mkl_fft=1.3.1=py310hd6ae3a3_0
+  - mkl_fft=1.3.1=py310h2b4bcf5_1
   - mkl_random=1.2.2=py310h00e6091_0
   - monai=1.0.1=pyhd8ed1ab_0
   - ncurses=6.3=h5eee18b_3
   - nettle=3.7.3=hbbd107a_1
-  - nsight-compute=2022.3.0.22=0
+  - nsight-compute=2022.4.0.15=0
   - numpy-base=1.23.4=py310h8e6c178_0
   - openh264=2.1.1=h4ff587b_0
   - openssl=1.1.1s=h7f8727e_0
-  - pycparser=2.21=pyhd3eb1b0_0
+  - pycparser=2.21=pyhd8ed1ab_0
   - pyopenssl=22.0.0=pyhd3eb1b0_0
   - python=3.10.8=h7a1cb2a_1
+  - python_abi=3.10=2_cp310
   - pytorch=1.13.0=py3.10_cuda11.6_cudnn8.3.2_0
   - pytorch-cuda=11.6=h867d48c_0
   - pytorch-mutex=1.0=cuda
   - readline=8.2=h5eee18b_0
-  - six=1.16.0=pyhd3eb1b0_1
+  - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.40.0=h5082296_0
   - tk=8.6.12=h1ccaba5_0
-  - typing_extensions=4.4.0=py310h06a4308_0
+  - typing-extensions=4.4.0=hd8ed1ab_0
+  - typing_extensions=4.4.0=pyha770c72_0
   - tzdata=2022g=h04d1e81_0
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.8=h5eee18b_0
+  - yaml=0.2.5=h7f98852_2
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.2=ha4553b6_0
   - pip:
@@ -123,10 +126,11 @@ dependencies:
       - autopage==0.5.1
       - babel==2.11.0
       - beautifulsoup4==4.11.1
-      - black==22.10.0
+      - black==22.12.0
       - brotlipy==0.7.0
       - cachetools==5.2.0
-      - cffi==1.15.1
+      - certifi==2022.9.24
+      - cffi==1.15.0
       - cfgv==3.3.1
       - click==8.1.3
       - cliff==4.1.0
@@ -166,6 +170,7 @@ dependencies:
       - grpcio==1.51.1
       - gunicorn==20.1.0
       - h5py==3.7.0
+      - highdicom==0.20.0
       - huggingface-hub==0.11.1
       - identify==2.5.9
       - idna==3.4
@@ -194,6 +199,7 @@ dependencies:
       - mkl-random==1.2.2
       - mkl-service==2.4.0
       - mlflow==2.0.1
+      - monai-deploy-app-sdk==0.5.0
       - mypy==0.991
       - mypy-extensions==0.4.3
       - networkx==2.8.3
@@ -203,18 +209,19 @@ dependencies:
       - nodeenv==1.7.0
       - nptyping==2.4.1
       - numba==0.56.4
-      - numpy==1.23.5
+      - numpy==1.23.4
       - oauthlib==3.2.2
       - openslide-python==1.1.2
       - optuna==3.0.4
       - packaging==21.3
       - pandas==1.5.2
       - parameterized==0.8.1
-      - pathspec==0.10.2
+      - pathspec==0.10.3
       - pbr==5.11.0
       - pep8-naming==0.13.2
       - pillow==9.3.0
-      - pip==22.2.2
+      - pillow-jpls==1.2.0
+      - pip==22.3.1
       - platformdirs==2.6.0
       - pre-commit==2.20.0
       - prettytable==3.5.0
@@ -238,7 +245,7 @@ dependencies:
       - python-dateutil==2.8.2
       - pythonwebhdfs==0.2.3
       - pytorch-ignite==0.4.10
-      - pytype==2022.11.29
+      - pytype==2022.12.9
       - pytz==2022.6
       - pywavelets==1.4.1
       - pyyaml==6.0
@@ -251,7 +258,7 @@ dependencies:
       - rsa==4.9
       - schema==0.7.5
       - scikit-image==0.19.3
-      - scikit-learn==1.1.3
+      - scikit-learn==1.2.0
       - scipy==1.8.1
       - setuptools==65.6.3
       - shap==0.41.0
@@ -292,9 +299,8 @@ dependencies:
       - types-pkg-resources==0.1.3
       - types-pyyaml==6.0.12.2
       - types-toml==0.10.8.1
-      - typing-extensions==4.4.0
       - typing-inspect==0.8.0
-      - urllib3==1.26.12
+      - urllib3==1.26.13
       - virtualenv==20.17.1
       - wcwidth==0.2.5
       - websocket-client==1.4.2
